@@ -852,7 +852,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 #define cSetting_valence_mode               616
 #define cSetting_show_frame_rate            617
 #define cSetting_movie_panel                618
-
+#define cSetting_mouse_z_scale              619
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -863,6 +863,6 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       619
+#define cSetting_INIT                       620
 
 #endif
