@@ -25,9 +25,10 @@ def get_auto_arg_list(self_cmd=cmd):
         'distance'       : [ self_cmd.object_sc              , 'object'          , ''   ],
         'enable'         : [ self_cmd.object_sc              , 'object'          , ' '  ],        
         'extract'        : [ self_cmd.object_sc              , 'object'          , ''   ],      
-        'full_screen'    : [ self_cmd.toggle_sc              , 'option'          , ''   ],
         'feedback'       : [ self_cmd.fb_action_sc           , 'action'          , ', ' ],
+        'fit'            : [ self_cmd.selection_sc           , 'selection'       , ''   ],        
         'flag'           : [ self_cmd.editing.flag_sc        , 'flag'            , ', ' ],
+        'full_screen'    : [ self_cmd.toggle_sc              , 'option'          , ''   ],
         'get'            : [ self_cmd.setting.setting_sc     , 'setting'         , ', ' ],
         'gradient'       : [ self_cmd.object_sc              , 'gradient'        , ', ' ],
         'help'           : [ self_cmd.help_sc                , 'selection'       , ''   ],
@@ -36,6 +37,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'iterate'        : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'iterate_state'  : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'indicate'       : [ self_cmd.selection_sc           , 'selection'       , ''   ],
+        'intra_fit'      : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'label'          : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'map_set'        : [ self_cmd.map_sc                 , 'map'             , ''   ],
         'mask'           : [ self_cmd.selection_sc           , 'selection'       , ''   ],
